ajout de la reponse du serveur apres une commande et ajout du onboading

--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,3 +1,3 @@
 <resources>
-    <color name="blanc">#fffeee</color> <!-- Rouge -->
+    <color name="white">#fffeee</color> <!-- Rouge -->
 </resources>
